refactor(alert): ♻️ 使用List.of替代Arrays.asList创建不可变列表
将ClusterAlertQuotaServiceImpl中的两个Arrays.asList调用替换为List.of方法，
以创建不可变列表。List.of方法在性能上更优且更符合不可变集合的语义。

这种修改不会影响现有功能，但能提升代码质量和可读性。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>